examples/test/testpolicy14757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14757
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key34: value41
      key2: value4
      key25: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value19
          key13: value24
      podSelector:
        matchLabels:
          key21: value13
